--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,54 @@
 trigger:
-- master
-
-pool:
-  vmImage: ubuntu-latest
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- '*'
+variables:
+  buildConfiguration: Release
+stages:
+- stage: Build
+  displayName: Build the web application
+  jobs:
+  - job: Build
+    displayName: Build job
+    pool:
+      vmImage: ubuntu-18.04
+      demands:
+      - npm
+    variables:
+      wwwrootDir: src/main
+      dotnetSdkVersion: 3.1.300
+    steps:
+    - task: UseDotNet@2
+      displayName: Use .NET SDK $(dotnetSdkVersion)
+      inputs:
+        version: $(dotnetSdkVersion)
+    - task: Npm@1
+      displayName: Run npm install
+      inputs:
+        verbose: false
+    - script: ./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)
+      displayName: Compile Sass assets
+    - task: gulp@1
+      displayName: Run gulp tasks
+    - script: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
+      displayName: Write build info
+      workingDirectory: $(wwwrootDir)
+    - task: DotNetCoreCLI@2
+      displayName: Restore project dependencies
+      inputs:
+        command: restore
+        projects: '**/*.csproj'
+    - task: DotNetCoreCLI@2
+      displayName: Build the project - $(buildConfiguration)
+      inputs:
+        command: build
+        arguments: --no-restore --configuration $(buildConfiguration)
+        projects: '**/*.csproj'
+    - task: DotNetCoreCLI@2
+      displayName: Publish the project - $(buildConfiguration)
+      inputs:
+        command: publish
+        projects: '**/*.csproj'
+        publishWebProjects: false
+        arguments: --no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)
+        zipAfterPublish: true
+    - publish: $(Build.ArtifactStagingDirectory)
+      artifact: drop
