--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,8 +24,8 @@ stages:
       displayName: Run npm install
       inputs:
         verbose: false
-    - script: ./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)
-      displayName: Compile Sass assets
+    - script: dotnet build --configuration $(buildConfiguration)
+      displayName: 'dotnet build $(buildConfiguration)'
     - task: gulp@1
       displayName: Run gulp tasks
     - script: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
