--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,17 @@ stages:
       displayName: Use .NET SDK $(dotnetSdkVersion)
       inputs:
         version: $(dotnetSdkVersion)
+    - task: DotNetCoreCLI@2
+      displayName: Restore project dependencies
+      inputs:
+        command: restore
+        projects: '**/*.csproj'
+    - task: DotNetCoreCLI@2
+      displayName: Build the project - Release
+      inputs:
+        command: build
+        arguments: --no-restore --configuration Release
+        projects: '**/*.csproj'
 
 - stage: Deploy
   displayName: Deploy
