--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,17 @@ stages:
       displayName: Use .NET SDK $(dotnetSdkVersion)
       inputs:
         version: $(dotnetSdkVersion)
-    - task: DotNetCoreCLI@2
-      displayName: Build the project - Release
+    - task: Npm@1
+      displayName: Run npm install
       inputs:
-        command: build
-        arguments: --no-restore --configuration Release
-        projects: '**/*.csproj'
+        verbose: false
+    - script: ./node_modules/.bin/node-sass src/main --output src/main
+      displayName: Compile Sass assets
+    - task: gulp@1
+      displayName: Run gulp tasks
+    - script: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
+      displayName: Write build info
+      workingDirectory: src/main
 
 - stage: Deploy
   displayName: Deploy
