--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,6 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
-              azureSubscription: bba12a48-76de-4498-b0bf-77e7ce1d2b58
+              azureSubscription: $(Subscription)
               appName: $(WebAppName)
               package: $(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip
